@@ -14,11 +14,14 @@ java {
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-        implementation 'org.apache.ignite:ignite-core:2.15.0'
+    def igniteVersion = '2.16.0-SNAPSHOT'
+    implementation "org.apache.ignite:ignite-core:${igniteVersion}"
+    implementation "org.apache.ignite:ignite-slf4j:${igniteVersion}"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -32,7 +35,6 @@ graalvmNative {
                         buildArgs.add("--add-opens=java.base/java.time=ALL-UNNAMED")
                         buildArgs.add("--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED")
                         buildArgs.add("--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED")
-                        buildArgs.add("--add-exports java.base/jdk.internal.misc=ALL-UNNAMED")
                         buildArgs.add("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
                         buildArgs.add("--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED")
                         buildArgs.add("--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED")
@@ -43,11 +45,23 @@ graalvmNative {
                         buildArgs.add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED")
                         buildArgs.add("--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED")
                         buildArgs.add("--add-opens=java.base/java.lang=ALL-UNNAMED")
-                        buildArgs.add("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
-                        buildArgs.add("--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED")
-                        buildArgs.add("--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED")
-                        buildArgs.add("--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED")
-                        buildArgs.add("--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED")
                 }
         }
+}
+
+bootRun {
+     jvmArgs "--add-opens=java.base/java.time=ALL-UNNAMED",
+            "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+            "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+            "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image"
 }
